--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "parcel": "^2.16.1"
   },
   "dependencies": {
