--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "parcel": "^2.16.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/postcss": "^4.1.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.0",
     "tailwindcss": "^4.1.18"
   },
