--- a/package.json
+++ b/package.json
@@ -19,9 +19,18 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.6",
+    "@babel/preset-env": "^7.28.6",
+    "@babel/preset-typescript": "^7.28.5",
+    "@jest/globals": "^30.2.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.1",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
-    "parcel": "^2.16.1"
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "parcel": "^2.16.1",
+    "ts-jest": "^29.4.6"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
