--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^19.2.3",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "parcel": "^2.16.1",
     "ts-jest": "^29.4.6"
   },
